--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Miscellaneous
+# ===== Miscellaneous =====
 *.class
 *.log
 *.pyc
@@ -11,17 +11,35 @@
 .svn/
 .swiftpm/
 migrate_working_dir/
+.vscode/
 
+# ===== Logs =====
+*.log
+
+# ===== Environment =====
+.env
+.env.*
+
+# ===== Docker =====
+.pgdata/
+**/pgdata/
+
+# ===== Python / Django =====
+backend/.venv/
+backend/__pycache__/
+backend/**/*.pyc
+backend/**/*.pyo
+backend/**/*.pyd
+backend/.pytest_cache/
+backend/staticfiles/
+backend/media/
+
+# ===== Flutter =====
 # IntelliJ related
 *.iml
 *.ipr
 *.iws
 .idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
 
 # Flutter/Dart/Pub related
 **/doc/api/
